--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2023-10-25
+  Changes:
+    - Fix all stack sizes
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2023-10-25
   Changes:
