fix: fix catalyst amount for empty barrels in centrifuging recipes

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.1
+Date: 2024-04-28
+  Bugfixes:
+    - Fix catalyst amount for empty barrels in centrifuging recipes
+---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2024-04-27
   Balancing:
